--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie-edge">
     <title>Task Card App</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
 
     <!-- Libraries -->
